--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,33 @@
+/*google fonts*/
+
+  @import url('https://fonts.googleapis.com/css?family=Pacifico|Raleway:300,400,700,900');
+
+/*all elements*/
+
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+/*BODY*/
+
+body {
+  font-family: 'Raleway', sans-serif;
+  /*font-family: 'Pacifico', cursive;*/
+  font-size: 17px;
+  font-weight: 300;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  /*1170 + left/right paddings (both 15px)*/
+
+}
+
+/*header*/
+
+.page-header {
+  min-height: 100vh;
+  background: #f9f8fb url('')
 }
