--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,13 @@
 /*google fonts*/
-
-  @import url('https://fonts.googleapis.com/css?family=Pacifico|Raleway:300,400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Pacifico|Raleway:300,400,700,900');
 
 /*all elements*/
-
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 /*BODY*/
-
 body {
   font-family: 'Raleway', sans-serif;
   /*font-family: 'Pacifico', cursive;*/
@@ -22,12 +19,11 @@ body {
   width: 100%;
   max-width: 1200px;
   /*1170 + left/right paddings (both 15px)*/
-
 }
 
 /*header*/
-
 .page-header {
   min-height: 100vh;
-  background: #f9f8fb url('')
+  background: #f9f8fb url('../img/header-bg.jpg') 50% no-repeat;
+  background-size: cover;
 }
