--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,22 @@ body {
   color: #262626;
 }
 
-.container {
+/*redifining standart classes of external flex grid elements*/
+.row {
+  margin: 0;
+}
+
+[class*='col-'] {
+  padding: 15px;
+}
+
+.flex-container {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
@@ -34,17 +49,21 @@ body {
 .page-header {
   position: relative;
   min-height: 100vh;
-  padding-top: 220px;
+  padding-top: 15vh;
   background: #f9f8fb url('../img/header-bg.jpg') 50% 50% no-repeat;
   background-size: cover;
 }
 
 .header__logo {
-  margin: 0;
+  margin: 0 15px;
   font-family: 'Pacifico', cursive;
   font-weight: 400;
   font-size: 50px;
   line-height: 25px;
+}
+
+.header__nav {
+  margin: 60px 15px;
 }
 
 .nav__list {
@@ -81,8 +100,8 @@ body {
 }
 
 /*information about section*/
-.section__info--white {
-  color: #ffffff;
+.section__info--header {
+  margin-top: 17vh;
 }
 
 .section__info--center {
@@ -94,13 +113,13 @@ body {
   font-size: 90px;
   font-weight: 700;
   text-transform: capitalize;
-  line-height: 27px;
+  line-height: 70px;
 }
 
 .info__title--header {
   font-size: 60px;
   font-weight: 700;
-  line-height: 25px;
+  line-height: 45px;
 }
 
 .info__text {
@@ -108,6 +127,10 @@ body {
   font-weight: 300;
   line-height: 27px;
   margin: 30px 0;
+}
+
+.info__text + .info__text {
+  margin: 0;
 }
 
 .info__button {
@@ -128,7 +151,7 @@ body {
 /*Scroll*/
 .header__scroll {
   position: absolute;
-  bottom: 70px;
+  bottom: 6vh;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -149,9 +172,7 @@ body {
 
 /*about section*/
 .about-section {
-  padding: 70px 0;
-  /*width: 1500px;
-	height: 700px;*/
+  padding: 50px 0;
 	background-color: #00c4c4;
 	background-image: radial-gradient(circle at 0 0, rgb(0, 196, 196),
                     rgb(0, 183, 183) 32%,
@@ -159,4 +180,23 @@ body {
                     rgb(0, 156, 156)),
                     linear-gradient(rgb(0, 196, 196),
                     rgb(0, 196, 196));
+}
+
+.flex-container#about {
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.section__image {
+  display: block;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.section__info--about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #ffffff;
+  padding: 0 15px 0 85px;
 }
