--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,12 +20,16 @@
 /*BODY*/
 body {
   font-family: 'Raleway', sans-serif;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 27px;
   color: #262626;
 }
 
 /*redifining standart classes of external flex grid elements*/
 .row {
   margin: 0;
+  width: 100%;
 }
 
 [class*='col-'] {
@@ -33,47 +37,54 @@ body {
 }
 
 .flex-container {
-  display: -webkit-flex;
-  display: -ms-flex;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1200px;
+  /*1170 + left/right paddings (both 15px)*/
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.flex-container#home {
   flex-wrap: wrap;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  /*1170 + left/right paddings (both 15px)*/
 }
 
 /*header*/
 .page-header {
   position: relative;
   min-height: 100vh;
-  padding-top: 15vh;
+  /*padding-top: 15vh;*/
   background: #f9f8fb url('../img/header-bg.jpg') 50% 50% no-repeat;
   background-size: cover;
 }
 
+.header__nav {
+  width: 100%;
+  padding: 0 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 150px;
+  margin: 0;
+}
+
 .header__logo {
-  margin: 0 15px;
+  margin: 0;
   font-family: 'Pacifico', cursive;
   font-weight: 400;
   font-size: 50px;
   line-height: 25px;
 }
 
-.header__nav {
-  margin: 60px 15px;
-}
-
 .nav__list {
+  width: 557px;
   margin: 0;
   padding: 0;
   list-style: none;
-  display: -webkit-flex;
-  display: -ms-flex;
   display: flex;
-  font-size: 0;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav__item {
@@ -81,10 +92,6 @@ body {
   font-weight: bold;
   line-height: 25px;
   text-transform: uppercase;
-}
-
-.nav__item:not(:first-child) {
-  padding-left: 40px;
 }
 
 .nav__link {
@@ -95,84 +102,67 @@ body {
 
 .nav__link:hover {
   border-top: 3px solid #ff6033;
-  padding-top: 9px;
+  padding-top: 10px;
   color: #ff6033;
 }
 
-/*information about section*/
-.section__info--header {
-  margin-top: 17vh;
+.header__info {
+  width: 400px;
+  margin-top: 20vh;
+  padding: 0 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.section__info--center {
-  text-align: center;
-}
-
-.info__title {
+.header__title {
   margin: 0;
-  font-size: 90px;
-  font-weight: 700;
-  text-transform: capitalize;
-  line-height: 70px;
-}
-
-.info__title--header {
   font-size: 60px;
-  font-weight: 700;
-  line-height: 45px;
+  font-weight: 900;
+  line-height: 40px;
+  text-transform: capitalize;
 }
 
-.info__text {
-  font-size: 17px;
-  font-weight: 300;
-  line-height: 27px;
+.header__description {
   margin: 30px 0;
 }
 
-.info__text + .info__text {
-  margin: 0;
-}
-
-.info__button {
-  padding: 20px 25px;
+.header__button {
+  width: 200px;
+  height: 55px;
   border: none;
   outline: none;
   font-size: 20px;
-  line-height: 27px;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #ff6033;
-	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,.5);
-	-moz-box-shadow: 0 2px 5px rgba(0,0,0,.5);
-	box-shadow: 0 2px 5px rgba(0,0,0,.5);
+  box-shadow: 0 2px 5px rgba(0,0,0,.5);
 }
 
-/*Scroll*/
+/*scroll icon*/
 .header__scroll {
   position: absolute;
-  bottom: 6vh;
+  bottom: 7vh;
   left: 50%;
   transform: translateX(-50%);
 }
 
 .scroll__link {
   display: block;
+  width: 24px;
+  height: 40px;
+  background: url('../icons/scroll.png') 50% 50% no-repeat;
+  background-size: cover;
 }
 
 .scroll__link:hover {
   opacity: 0.6;
 }
 
-.scroll__link img {
-  width: 24px;
-  height: 40px;
-  object-fit: contain;
-}
-
 /*about section*/
-.about-section {
-  padding: 50px 0;
+.about {
+  padding: 15px 0;
 	background-color: #00c4c4;
 	background-image: radial-gradient(circle at 0 0, rgb(0, 196, 196),
                     rgb(0, 183, 183) 32%,
@@ -182,21 +172,127 @@ body {
                     rgb(0, 196, 196));
 }
 
-.flex-container#about {
-  flex-wrap: nowrap;
-  justify-content: center;
+.section__photo {
+  width: 50%;
+  /*padding: 0 15px;*/
 }
 
 .section__image {
-  display: block;
-  max-width: 100%;
-  object-fit: contain;
+  /*width: 100%;*/
+  /*object-fit: cover;*/
 }
 
-.section__info--about {
+/*section info*/
+.section__info {
+  display: flex;
+  padding: 15px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+#about .section__info {
+  margin-left: 70px;
+}
+
+.section__info--light {
+  color: #ffffff;
+}
+
+.section__info--center {
+  text-align: center;
+}
+
+.info__title {
+  margin: 0 0 30px 0;
+  font-size: 90px;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.info__text {
+  margin: 15px 0 0 0;
+}
+
+/*services*/
+.services {
+  padding: 170px 0 140px 0;
+  background-color: #70bfff;
+}
+
+#services.flex-container {
+  background: url('../img/services.png') center right no-repeat;
+  background-size: contain;
+}
+
+.services__list {
+  list-style: none;
+  margin: 0 15px 0 115px;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  color: #ffffff;
-  padding: 0 15px 0 85px;
+  justify-content: space-around;
 }
+
+.sercices__item {
+  width: 400px;
+  height: 100px;
+  margin: 10px 0;
+  background: #fff;
+  box-shadow: 0 4px 10px rgba(0,0,0,.5);
+  display: flex;
+}
+
+.services__link {
+  width: 75%;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #262626;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*pointer-events: none;*/
+}
+
+.services__link span {
+  text-align: center;
+}
+
+.services__button::before {
+  content: '';
+  display: block;
+  height: 100%;
+  width: 1px;
+  background-color: #9d9d9d;
+}
+
+.services__button {
+  width: 25%;
+  padding: 0;
+  border: none;
+  background: #fff;
+  outline: none;
+  position: relative;
+  /*display: flex;*/
+  /*justify-content: center;*/
+  /*align-items: center;*/
+}
+
+.services__button::before {
+  content: '';
+  display: block;
+  height: 100px;
+  width: 1px;
+  background: #9d9d9d;
+}
+
+.services__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/*gallery*/
