--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,8 @@ body {
 }
 
 .header__logo--mini {
-  font-size: 25px;
+  font-size: 22px;
+
 }
 
 .nav__list {
@@ -320,41 +321,53 @@ body {
 
 .gallery__list {
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
-  align-items: flex-start;
-  /*overflow: hidden;*/
+  overflow-x: auto;
 }
 
 .gallery__item {
-  width: 50%;
-  padding: 15px;
-}
-
-.gallery__item--small {
-  width: 33.3333333%;
-
+  /*padding: 15px;*/
+  width: 100%;
+  height: 100%;
+  /*box-shadow: 0 2px 5px rgba(0,0,0,.5);*/
 }
 
 .gallery__item--hero {
   width: 66.6666666%;
 }
 
+.gallery__item--middle {
+  width: 50%;
+}
+
+.gallery__item--small {
+  width: 33.3333333%;
+  /*padding: 15px;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .gallery__link {
   display: block;
+  /*padding: 15px;*/
+  position: relative;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
 }
 
 .gallery__picture {
-  display: block;
   max-width: 100%;
+  height: 100%;
   /*background: #00c4c4;*/
   /*box-shadow: 0 2px 5px rgba(0,0,0,.5);*/
-  /*object-fit: cover;*/
+  object-fit: cover;
 }
 
 .gallery__button {
@@ -374,25 +387,92 @@ body {
   color: #ffffff;
 }
 
+/*subscribe*/
+.subscribe {
+  height: 500px;
+  padding: 125px 0 155px;
+  background: #ffffff url('../img/subscribe-bg.jpg') center center no-repeat;
+  background-size: cover;
+}
+
+.subscribe .section__info {
+  width: 50%;
+}
+
+.subscribe .info__title {
+  font-size: 40px;
+  margin-bottom: 15px;
+}
+
+.subscribe__form {
+  display: flex;
+  margin: 15px 0;
+  /*flex-wrap: nowrap;*/
+}
+
+.subscribe__input {
+  width: 570px;
+  height: 55px;
+  margin: 15px;
+  margin-left: 0;
+  border: solid 1px #262626;
+}
+
+.subscribe__input::placeholder {
+  font-family: 'Raleway', sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 27px;
+  color: rgba(38, 38, 38, 0.5);
+  padding-left: 15px;
+}
+
+.subscribe__button {
+  width: 170px;
+  height: 55px;
+  border: none;
+  margin: 15px;
+  /*outline: none;*/
+  background-color: #96b92c;
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.5);
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 27px;
+  text-align: center;
+  color: #ffffff;
+}
+
+
+
+
+
 /*footer*/
 .page__footer {
   height: 90px;
   padding: 15px;
   background-color: #262626;
   color: #b9b9b9;
+  display: flex;
+  align-items: center;
 }
 
 .footer__copyright {
   font-size: 16px;
   line-height: 25px;
+  margin: 0;
+  padding: 0 15px;
 }
 
 .footer__info{
   font-size: 15px;
   line-height: 25px;
+  margin: 0;
+  padding: 0 15px;
 }
 
 .footer__info span {
   font-weight: 700;
   color: #ff2b58;
+  margin: 0;
 }
