--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -415,7 +415,10 @@ body {
   height: 55px;
   margin: 15px;
   margin-left: 0;
+  padding-left: 15px;
   border: solid 1px #262626;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
 }
 
 .subscribe__input::placeholder {
@@ -423,8 +426,9 @@ body {
   font-size: 15px;
   font-weight: 300;
   line-height: 27px;
-  color: rgba(38, 38, 38, 0.5);
-  padding-left: 15px;
+  color: #262626;
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .subscribe__button {
@@ -443,9 +447,89 @@ body {
   color: #ffffff;
 }
 
+/*contact*/
+.contact {
+  padding: 120px 15px;
+  background: #cdd3d1 url('../img/contact-bg.jpg') center center no-repeat;
+  background-size: cover;
+}
 
+.contact .section__info {
+  width: 370px;
+  margin: 0 auto;
+  padding: 0;
+}
 
+.contact .info__text {
+  margin: 30px 0;
+}
 
+#contact {
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.contact__form {
+  /*width: 500px;*/
+  padding: 0 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form__name,
+.form__email,
+.form__number,
+.form__text {
+  width: 500px;
+  height: 50px;
+  margin: 7.5px 0;
+  padding-left: 20px;
+  background: #00c4c4;
+  outline: none;
+  border: none;
+  font-family: 'Raleway', sans-serif;
+  color: #ffffff;
+}
+
+.form__text {
+  height: 250px;
+}
+
+.form__name::placeholder,
+.form__email::placeholder,
+.form__number::placeholder,
+.form__text::placeholder {
+  padding-top: 20px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 25px;
+  color: #ffffff;
+}
+
+.contact__info {
+  width: 350px;
+  /*margin: 0;*/
+  margin-left: 155px;
+}
+
+.contact__title {
+  margin: 0;
+  padding: 0;
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 25px;
+  text-transform: uppercase;
+}
+
+.contact__description {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 10px;
+  font-size: 20px;
+}
 
 /*footer*/
 .page__footer {
