--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,16 +26,6 @@ body {
   color: #262626;
 }
 
-/*redifining standart classes of external flex grid elements*/
-.row {
-  margin: 0;
-  width: 100%;
-}
-
-[class*='col-'] {
-  padding: 15px;
-}
-
 .flex-container {
   width: 100%;
   margin: 0 auto;
@@ -54,7 +44,6 @@ body {
 .page-header {
   position: relative;
   min-height: 100vh;
-  /*padding-top: 15vh;*/
   background: #f9f8fb url('../img/header-bg.jpg') 50% 50% no-repeat;
   background-size: cover;
 }
@@ -79,7 +68,6 @@ body {
 
 .header__logo--mini {
   font-size: 22px;
-
 }
 
 .nav__list {
@@ -168,7 +156,6 @@ body {
 /*about section*/
 .about {
   padding: 15px 0;
-	background-color: #00c4c4;
 	background-image: radial-gradient(circle at 0 0, rgb(0, 196, 196),
                     rgb(0, 183, 183) 32%,
                     rgb(0, 173, 173) 68%,
@@ -179,12 +166,6 @@ body {
 
 .section__photo {
   width: 50%;
-  /*padding: 0 15px;*/
-}
-
-.section__image {
-  /*width: 100%;*/
-  /*object-fit: cover;*/
 }
 
 /*section info*/
@@ -225,7 +206,7 @@ body {
   margin: 15px 0 0 0;
 }
 
-/*services*/
+/*services section*/
 .services {
   padding: 170px 0 140px 0;
   background-color: #70bfff;
@@ -271,14 +252,6 @@ body {
   text-align: center;
 }
 
-.services__button::before {
-  content: '';
-  display: block;
-  height: 100%;
-  width: 1px;
-  background-color: #9d9d9d;
-}
-
 .services__button {
   width: 25%;
   padding: 0;
@@ -303,7 +276,7 @@ body {
   transform: translate(-50%, -50%);
 }
 
-/*gallery*/
+/*gallery section*/
 .gallery {
   padding: 100px 0 120px;
 	background-color: #ffe92f;
@@ -320,20 +293,15 @@ body {
 }
 
 .gallery__list {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   overflow-x: auto;
 }
 
 .gallery__item {
-  /*padding: 15px;*/
-  width: 100%;
-  height: 100%;
+  padding: 15px;
   /*box-shadow: 0 2px 5px rgba(0,0,0,.5);*/
 }
 
@@ -347,25 +315,23 @@ body {
 
 .gallery__item--small {
   width: 33.3333333%;
-  /*padding: 15px;*/
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .gallery__link {
   display: block;
-  /*padding: 15px;*/
   position: relative;
-  width: 100%;
-  height: 100%;
   pointer-events: none;
+}
+
+.gallery__item--small .gallery__link:first-child {
+  padding-bottom: 30px;
 }
 
 .gallery__picture {
   max-width: 100%;
-  height: 100%;
-  /*background: #00c4c4;*/
   /*box-shadow: 0 2px 5px rgba(0,0,0,.5);*/
   object-fit: cover;
 }
@@ -387,7 +353,7 @@ body {
   color: #ffffff;
 }
 
-/*subscribe*/
+/*subscribe section*/
 .subscribe {
   height: 500px;
   padding: 125px 0 155px;
@@ -407,7 +373,6 @@ body {
 .subscribe__form {
   display: flex;
   margin: 15px 0;
-  /*flex-wrap: nowrap;*/
 }
 
 .subscribe__input {
@@ -436,7 +401,6 @@ body {
   height: 55px;
   border: none;
   margin: 15px;
-  /*outline: none;*/
   background-color: #96b92c;
   box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.5);
   font-family: "Raleway", sans-serif;
@@ -447,7 +411,71 @@ body {
   color: #ffffff;
 }
 
-/*contact*/
+/*blog*/
+.blog {
+  margin: 0;
+  padding: 100px 0 120px;
+  background: #b07cf7;
+}
+
+.blog .section__info {
+  width: 600px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.blog .info__text {
+  margin: 30px 0;
+}
+
+.blog__article {
+  position: relative;
+  width: 33.3333333%;
+  margin: 0;
+  padding: 15px;
+}
+
+.article__image {
+  /*position: absolute;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  max-width: 100%;
+  object-fit: cover;
+}
+
+.article__image::after {
+  content: "";
+  background-image: linear-gradient(to top, rgba(0,0,0,.9), rgba(255,255,255,.5));
+}
+
+.article__info {
+  color: #ffffff;
+}
+
+.article__title,
+.article__text {
+  margin: 0;
+  padding: 0;
+}
+
+.blog__button {
+  display: block;
+  margin: 35px auto 0;
+  padding: 15px;
+  width: 200px;
+  height: 55px;
+  border: none;
+  outline: none;
+  background: #f72b3b;
+  box-shadow: 0 2px 5px rgba(0,0,0,.5);
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+/*contact section*/
 .contact {
   padding: 120px 15px;
   background: #cdd3d1 url('../img/contact-bg.jpg') center center no-repeat;
@@ -470,7 +498,6 @@ body {
 }
 
 .contact__form {
-  /*width: 500px;*/
   padding: 0 15px;
   display: flex;
   flex-direction: column;
@@ -511,7 +538,6 @@ body {
 
 .contact__info {
   width: 350px;
-  /*margin: 0;*/
   margin-left: 155px;
 }
 
@@ -546,6 +572,14 @@ body {
   line-height: 25px;
   margin: 0;
   padding: 0 15px;
+}
+
+.footer__logo {
+  margin: 0;
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 25px;
 }
 
 .footer__info{
