--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -430,32 +430,81 @@ body {
 
 .blog__article {
   position: relative;
-  width: 33.3333333%;
-  margin: 0;
-  padding: 15px;
+  width: 370px;
+  height: 310px;
+  margin: 15px;
+  padding: 0;
 }
 
 .article__image {
-  /*position: absolute;*/
-  /*top: 0;*/
-  /*left: 0;*/
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   max-width: 100%;
   object-fit: cover;
 }
 
 .article__image::after {
   content: "";
-  background-image: linear-gradient(to top, rgba(0,0,0,.9), rgba(255,255,255,.5));
+  background-image: linear-gradient(to top, rgba(0,0,0), rgba(255,255,255));
 }
 
 .article__info {
+  position: relative;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   color: #ffffff;
 }
 
-.article__title,
+.article__title {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
 .article__text {
   margin: 0;
   padding: 0;
+  font-size: 13px;
+  color: #ffffff;
+  opacity: 0.5;
+}
+
+.article__date {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  border-radius: 5px;
+  background-color: #262626;
+  opacity: 0.5;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 25px;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.article__date p {
+  margin: 0;
+  padding: 0;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.article__date span {
+  font-size: 21px;
+  font-weight: 900;
 }
 
 .blog__button {
