--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -296,7 +296,7 @@ body {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   overflow-x: auto;
 }
 
@@ -408,13 +408,14 @@ body {
   font-weight: 300;
   line-height: 27px;
   text-align: center;
+  text-transform: uppercase;
   color: #ffffff;
 }
 
 /*blog*/
 .blog {
   margin: 0;
-  padding: 100px 0 120px;
+  padding: 120px 0;
   background: #b07cf7;
 }
 
@@ -466,6 +467,7 @@ body {
   font-size: 20px;
   font-weight: 700;
   color: #ffffff;
+  padding-bottom: 10px;
 }
 
 .article__text {
