--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -430,11 +430,14 @@ body {
 }
 
 .blog__article {
+  display: block;
+  text-decoration: none;
   position: relative;
   width: 370px;
   height: 310px;
   margin: 15px;
   padding: 0;
+  pointer-events: auto;
 }
 
 .blog__article::before {
@@ -446,6 +449,11 @@ body {
   bottom: 0;
   /*background: linear-gradient(to bottom, rgba(0,0,0,0.5) 80%, black);*/
   background: linear-gradient(to top, rgba(0,0,0,0.8), rgba(255,255,255,0.1));
+}
+
+.blog__article:hover.blog__article::before{
+  content: "";
+  background: none;
 }
 
 .article__image {
