--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -328,6 +328,7 @@ body {
 
 .gallery__picture {
   max-width: 100%;
+  height: 100%;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
   object-fit: cover;
 }
@@ -459,6 +460,7 @@ body {
 .article__image {
   display: block;
   max-width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
