--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,6 @@
          url('../fonts/pacifico-webfont.woff') format('woff');
     /*regular*/
     font-style: normal;
-
   }
 
 /*all elements*/
@@ -19,6 +18,7 @@
 
 /*BODY*/
 body {
+  min-width: 600px;
   font-family: 'Raleway', sans-serif;
   font-size: 17px;
   font-weight: 300;
@@ -28,34 +28,37 @@ body {
 
 .flex-container {
   width: 100%;
-  margin: 0 auto;
   max-width: 1200px;
-  /*1170 + left/right paddings (both 15px)*/
+  margin: 0 auto;
+  /*1170 + left/right paddings (both of 15px)*/
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .flex-container#home {
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 /*header*/
 .page-header {
   position: relative;
   min-height: 100vh;
-  background: #f9f8fb url('../img/header-bg.jpg') 50% 50% no-repeat;
+  background: #f9f8fb url('../img/header.jpg') center center no-repeat;
   background-size: cover;
 }
 
 .header__nav {
   width: 100%;
-  padding: 0 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   height: 150px;
   margin: 0;
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__logo {
@@ -63,7 +66,7 @@ body {
   font-family: 'Pacifico', cursive;
   font-weight: 400;
   font-size: 50px;
-  line-height: 25px;
+  line-height: 50px;
 }
 
 .header__logo--mini {
@@ -93,15 +96,18 @@ body {
   color: #262626;
 }
 
-.nav__link:hover {
+.nav__link:hover, .is-active {
   border-top: 3px solid #ff6033;
   padding-top: 10px;
   color: #ff6033;
+  text-decoration: none;
 }
 
 .header__info {
-  width: 400px;
+  width: 40%;
   margin-top: 20vh;
+  /*margin-bottom: 40vh;*/
+  /*margin-top: 250px;*/
   padding: 0 15px;
   display: flex;
   flex-direction: column;
@@ -112,7 +118,7 @@ body {
   margin: 0;
   font-size: 60px;
   font-weight: 900;
-  line-height: 40px;
+  line-height: 50px;
   text-transform: capitalize;
 }
 
@@ -133,10 +139,14 @@ body {
   box-shadow: 0 2px 5px rgba(0,0,0,.5);
 }
 
+button:hover {
+  box-shadow: 0 5px 10px rgba(0,0,0,.9);
+}
+
 /*scroll icon*/
 .header__scroll {
   position: absolute;
-  bottom: 7vh;
+  bottom: 5vh;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -152,6 +162,12 @@ body {
 /*about section*/
 .about {
   padding: 15px 0;
+  height: 700px;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 	background-image: radial-gradient(circle at 0 0, rgb(0, 196, 196),
                     rgb(0, 183, 183) 32%,
                     rgb(0, 173, 173) 68%,
@@ -164,6 +180,10 @@ body {
   width: 50%;
 }
 
+.section__image {
+  max-width: 100%;
+}
+
 /*section info*/
 .section__info {
   display: flex;
@@ -174,6 +194,7 @@ body {
 }
 
 #about .section__info {
+  width: 50%;
   margin-left: 70px;
 }
 
@@ -191,6 +212,7 @@ body {
   margin: 0 0 30px 0;
   font-size: 90px;
   font-weight: 700;
+  line-height: 80px;
   text-transform: capitalize;
 }
 
@@ -249,7 +271,7 @@ body {
 }
 
 .services__link:hover {
-  background: #9d9d9d;
+  background: #FF993E;
 }
 
 .services__button {
@@ -322,19 +344,30 @@ body {
 
 .gallery__link {
   display: block;
+  width: 100%;
+  height: 100%;
   position: relative;
-  pointer-events: none;
+  /*pointer-events: none;*/
+}
+
+.gallery__item--small .gallery__link:first-child {
+  margin-bottom: 30px;
 }
 
 .gallery__picture {
   max-width: 100%;
-  height: 100%;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
+  height: 100%;
   object-fit: cover;
+  filter: grayscale(75%);
 }
 
 .gallery__picture--hero {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+.gallery__picture:hover {
+  filter: grayscale(0);
 }
 
 .gallery__button {
@@ -356,10 +389,10 @@ body {
 
 /*subscribe section*/
 .subscribe {
-  height: 500px;
+  /*height: 500px;*/
   padding: 125px 0 155px;
   background: #ffffff url('../img/subscribe-bg.jpg') center center no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 .subscribe .section__info {
@@ -372,12 +405,13 @@ body {
 }
 
 .subscribe__form {
+  width: 100%;
   display: flex;
   margin: 15px 0;
 }
 
 .subscribe__input {
-  width: 570px;
+  width: 100%;
   height: 55px;
   margin: 15px;
   margin-left: 0;
@@ -647,7 +681,7 @@ body {
 
 /*footer*/
 .page__footer {
-  height: 90px;
+  /*height: 90px;*/
   padding: 15px;
   background-color: #262626;
   color: #b9b9b9;
@@ -681,4 +715,117 @@ body {
   font-weight: 700;
   color: #ff2b58;
   margin: 0;
+}
+
+/*--------------------------------------------*/
+
+@media (max-width: 1024px) {
+  .header__nav {
+    flex-direction: column;
+  }
+  .header__info {
+    margin-left: 50px;
+  }
+  .contact__info {
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 950px) {
+  .header__info {
+    margin-top: 50px;
+  }
+  #services {
+    flex-direction: column;
+  }
+  #services .section__info {
+    order: -1;
+  }
+  .services__list {
+    margin: 0 auto;
+  }
+  .section__photo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0.75;
+    width: 100%;
+    transform: translate(-50%, -50%);
+  }
+  .section__image {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  #about .section__info {
+    width: 75%;
+    margin: 0 auto;
+    /*color: #262626;*/
+    z-index: 1;
+  }
+
+  #gallery .flex-container {
+    justify-content: center;
+  }
+  .gallery__list {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 0;
+  }
+  .gallery__item--hero {
+    width: 100%;
+  }
+  .gallery__item--small {
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .gallery__item--small .gallery__link:first-child {
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+  .gallery__item--middle {
+    width: 75%;
+  }
+  .subscribe .section__info {
+    width: 65%;
+  }
+  .subscribe__form {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .subscribe__button {
+    margin: 0 15px;
+  }
+  #blog .flex-container {
+    flex-direction: column;
+  }
+  .blog__article {
+    width: 50%;
+  }
+  .article__image {
+    width: 100%;
+  }
+  .blog .section__info {
+    width: 70%;
+  }
+#contact {
+  flex-direction: column;
+  align-items: center;
+}
+.contact__info {
+  text-align: center;
+  margin-top: 30px;
+}
+.contact__form {
+  align-items: center;
+}
+.page__footer .flex-container {
+  flex-direction: column;
+}
+.footer__logo {
+  margin: 15px;
+}
 }
